WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87717
Unresponsive WebProcesses can be mistaken for crashes.
https://bugs.webkit.org/show_bug.cgi?id=87717
Summary
Unresponsive WebProcesses can be mistaken for crashes.
Stephanie Lewis
Reported
2012-05-29 02:43:42 PDT
WebKitTestRunner reports #CRASHED in two places. The first place, webProcessDidCrash, always writes out a crash report (eventually). The second spot is when we are resetting the WebProcess. See
https://bugs.webkit.org/show_bug.cgi?id=52757
If it becomes unresponsive the WebProcess is killed, which for all intents and purposes looks like a crash. However, this makes the WebKit2 tests look very flaky, and creates confusion because no crash logs can be found for the unresponsive processes. The first step is separating the two types of crashes, and giving an error message when the process was just unresponsive, not crashing.
Attachments
patch
(8.17 KB, patch)
2012-05-29 02:53 PDT
,
Stephanie Lewis
dpranke
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stephanie Lewis
Comment 1
2012-05-29 02:53:30 PDT
Created
attachment 144497
[details]
patch
WebKit Review Bot
Comment 2
2012-05-29 02:54:54 PDT
Attachment 144497
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Tools/ChangeLog', u'Tools/Scripts/webkitpy..." exit_code: 1 Tools/Scripts/webkitpy/layout_tests/port/webkit_unittest.py:346: trailing whitespace [pep8/W291] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dirk Pranke
Comment 3
2012-05-29 12:07:09 PDT
Comment on
attachment 144497
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=144497&action=review
The patch looks fine. I'm not sure how you're defining "unresponsive" in WebKit2, but does it make sense to map these things onto TIMEOUTs rather than CRASHes?
> Tools/Scripts/webkitpy/layout_tests/port/webkit.py:588 > + crash_log += ' Process failed to become responsive before timing out.'
See my comment in
bug 87714
about possibly changing the interface to _get_crash_log() so that you don't have to do the .startswith() check here.
Dirk Pranke
Comment 4
2012-05-29 12:07:22 PDT
Oh, and fix the style nit, obviously :).
Stephanie Lewis
Comment 5
2012-05-30 18:53:37 PDT
committed
http://trac.webkit.org/projects/webkit/changeset/119018
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug