Tools/Scripts/webkitpy/layout_tests/port/webkit.py
@@ -449,6 +449,10 @@ class WebKitDriver(Driver):
         self._crashed_process_name = None
         self._crashed_pid = None
 
+        # WebKitTestRunner can report back subprocesses that became unresponsive
+        # This could mean they crashed.
+        self._subprocess_was_unresponsive = False
+
         # stderr reading is scoped on a per-test (not per-block) basis, so we store the accumulated
         # stderr output, as well as if we've seen #EOF on this driver instance.
         # FIXME: We should probably remove _read_first_block and _read_optional_image_block and
@@ -513,7 +517,8 @@ class WebKitDriver(Driver):
             # See http://trac.webkit.org/changeset/65537.
             self._crashed_process_name = self._server_process.name()
             self._crashed_pid = self._server_process.pid()
-        elif error_line.startswith("#CRASHED - WebProcess"):
+        elif (error_line.startswith("#CRASHED - WebProcess")
+            or error_line.startswith("#PROCESS UNRESPONSIVE - WebProcess")):
             # WebKitTestRunner uses this to report that the WebProcess subprocess crashed.
             pid = None
             m = re.search('pid (\d+)', error_line)
@@ -523,6 +528,8 @@ class WebKitDriver(Driver):
             self._crashed_pid = pid
             # FIXME: delete this after we're sure this code is working :)
             _log.debug('WebProcess crash, pid = %s, error_line = %s' % (str(pid), error_line))
+            if error_line.startswith("#PROCESS UNRESPONSIVE - WebProcess"):
+                self._subprocess_was_unresponsive = True
             return True
         return self.has_crashed()
 
@@ -581,6 +588,9 @@ class WebKitDriver(Driver):
             # If we don't find a crash log use a placeholder error message instead.
             if not crash_log:
                 crash_log = 'no crash log found for %s:%d.' % (self._crashed_process_name, self._crashed_pid)
+                # If we were unresponsive append a message informing there may not have been a crash.
+                if self._subprocess_was_unresponsive:
+                    crash_log += '  Process failed to become responsive before timing out.'
 
         timeout = self._server_process.timed_out
         if timeout:
